# OpenglPlayground

./: CMakeLists.txt  combineFilesWin.ps1  main.cpp
shaders/: fragment.glsl  vertex.glsl
src/: common.h  main.cpp
src/camera/: camera.cpp  camera.h
src/light/: directionallight.cpp  directionallight.h  light.cpp  light.h  pointlight.cpp  pointlight.h  spotlight.cpp  spotlight.h
src/material/: material.cpp  material.h
src/mesh/: mesh.cpp  mesh.h
src/model/: model.cpp  model.h
src/shader/: shader.cpp  shader.h
src/texture/: texture.cpp  texture.h
src/window/: window.cpp  window.h
